--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
-    <body> <canvas height="400" 
-width="350" id="canvas"></canvas>
-        <div id="controls">
-           <input type="button" 
-onclick="drt='l'" id="left" 
-value="&larr;"/><input 
-type="button" onclick="drt='r'" 
-id="right" value="&rarr;"/><input 
-type="button" onclick="drt='t'" 
-id="top" value="&uarr;"/>
-           <input type="button" 
-onclick="drt='d'" id="down" 
-value="&darr;"/>
-        </div>
-   <script type="text/javascript" src="script.js"></script>
- </body>
+	<head>
+	<link rel="stylesheet" href="style.css">
+	</head>
+	<body> 
+		<canvas height="800" width="800" id="canvas"></canvas>
+		<script type="text/javascript" src="script.js"></script>
+	</body>
 </html>
